--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,8 +9,8 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.interaction.toolkit": "2.0.0-pre.7",
-    "com.unity.xr.management": "4.2.0",
+    "com.unity.xr.interaction.toolkit": "2.0.0",
+    "com.unity.xr.management": "4.2.1",
     "com.unity.xr.oculus": "1.11.2",
     "com.unity.xr.openxr": "1.3.1",
     "com.unity.xr.windowsmr": "4.6.1",
