--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,5 @@ fmod_editor.log
 # FMOD 1.10.x (Legacy)
 /Assets/FMODAssets/*
 /Assets/FMODStudioCache.meta
+Packages/packages-lock.json
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
